--- a/src/styl/app.styl
+++ b/src/styl/app.styl
@@ -104,9 +104,6 @@ body
 .perfil__fundo
     background-color: circulo
     height: 300px
-
-
- 
 .n1
     border-left:  8px solid azul
 .n2
@@ -114,7 +111,18 @@ body
 .n3
     border-left:  8px solid circulo
 
-
+.desligar__dark
+    background-color: black
+    height: 5rem
+.desligar__x
+    float: right 
+    color: #ffffff
+    padding: 1rem 1rem
+    font-size: 3.5rem
+    cursor: pointer
+.desligar__fundo
+    height: 450px
+    background-color: circulo
 
 
 //components
@@ -150,7 +158,8 @@ body
     >img 
         margin-top: 18px
         width: 100px
-        height 100px         
+        height 100px 
+        cursor pointer   
 
 .perfil__titulo
     width: 40%
